8.4.1/8.4.1-notes.rst
..
   .. _release-8-4-1:

   Release notes for version 8.4.1
   ===============================

.. _release-8-4-1:

バージョン 8.4.1 のリリースノート
=================================

..
   The significant changes to the various parts of the compiler are listed in the
   following sections. There have also been numerous bug fixes and performance
   improvements over the 8.2.1 release.

コンパイラのさまざまな部分での重要な変更は以降の節で一覧表にしてあります．
8.2.1 ブランチに対して大量のバグ修正と性能改善を行いました．

..
   .. note::

       This compiling this release requires GCC 4.7 or newer due to
       :ghc-ticket:`14244`.

.. note::

    :ghc-ticket:`14244` にあるようにこのリリースのコンパイルには GCC 4.7 以降が必要です．

..
   Highlights
   ----------

ハイライト
----------

..
   The highlights, since the 8.2.1 release, are:

   - GHC is now capable of deriving more instances

   - More refinement of the :ghc-flag:`-XTypeInType` story and improvements in type
     error messages.

   - Further improvements in code generation

   - Incoporation of library changes including the Phase 2 of the Semigroup-Monoid Proposal

   - A variety of Windows compatibility improvements

   - Many, many bug fixes.


8.2.1 リリースからの変更のハイライトは以下のとおりです．

- GHC はより多くのインスタンスを導出できるようになっています．

- 型エラーメッセージの :ghc-flag:`-XTypeInType` に関する説明をより細かくし改善してあります．

- コード生成をさらに改良してあります．

- Semigroup-Monoidプロポーザルのフェーズ2に関連するライブラリが変更されています．

- Windows 互換性が多数改善されています．

- 大量のバグが修正されています．


..
   Full details
   ------------

詳細
----

..
   Language
   ~~~~~~~~

言語
~~~~

..
   - Data families have been generalised a bit: a data family declaration can now
     end with a kind variable ``k`` instead of ``Type``. Additionally, data/newtype
     instance no longer need to list all the patterns of the family if they don't
     wish to; this is quite like how regular datatypes with a kind signature can omit
     some type variables.

- データ族を少し一般化してあります．
  データ族宣言の最後を ``Type`` ではなく，カインド変数 ``k`` で終えられます．
  加えて，data あるいは newtype インスタンスは望まないのであれば，すべての族のパターンを列挙する必要はなくなりました．
  これは，通常のカインドシグネチャ付きのデータ型では型変数を省略できるのと同じです．

..
   - There are now fewer restrictions regarding whether kind variables can appear
     on the right-hand sides of type and data family instances. Before, there was
     a strict requirements that all kind variables on the RHS had to be explicitly
     bound by type patterns on the LHS. Now, kind variables can be *implicitly*
     bound, which allows constructions like these: ::

       data family Nat :: k -> k -> *
       -- k is implicitly bound by an invisible kind pattern
       newtype instance Nat :: (k -> *) -> (k -> *) -> * where
	 Nat :: (forall xx. f xx -> g xx) -> Nat f g

       class Funct f where
	 type Codomain f :: *
       instance Funct ('KProxy :: KProxy o) where
	 -- o is implicitly bound by the kind signature
	 -- of the LHS type pattern ('KProxy)
	 type Codomain 'KProxy = NatTr (Proxy :: o -> *)

- 型族およびデータ族インスタンスの右辺にカインド変数が出現できるかどうかに関してほとんど制約はなくなりました．
  以前は，右辺のすべてのカインド変数は左辺の型パターンで明示的に束縛されていなければなりませんでした．
  これからは， *暗黙に* 束縛されたカインド変数が許され，以下のような構成が可能になります． ::

    data family Nat :: k -> k -> *
    -- k は見えないカインドパターンで暗黙に束縛されている
    newtype instance Nat :: (k -> *) -> (k -> *) -> * where
      Nat :: (forall xx. f xx -> g xx) -> Nat f g

    class Funct f where
      type Codomain f :: *
    instance Funct ('KProxy :: KProxy o) where
      -- o は左辺の型パターン('KProxy)の
      -- カインドシグネチャで暗黙に束縛されている
      type Codomain 'KProxy = NatTr (Proxy :: o -> *)

..
   - Implicitly bidirectional pattern synonyms no longer allow bang patterns
     (``!``) or irrefutable patterns (``~``) on the right-hand side. Previously,
     this was allowed, although the bang patterns and irrefutable patterns would
     be silently ignored when used in an expression context. This is now a proper
     error, and explicitly bidirectional pattern synonyms should be used in their
     stead. That is, instead of using this (which is an error): ::

	 data StrictJust a = Just !a

     Use this: ::

	 data StrictJust a <- Just !a where
	   StrictJust !a = Just a

- 暗黙に双方向的であるパターンシノニムの右辺では，バンパターン(``!``)および反駁不可パターン(``~``)は使えなくなりました．
  直前のリリースでは使えましたが，1つのコンテキストで使ったときには黙って無視されていました．
  これが正しくエラーになるということです．代りに明示的に双方向的であるパターンシノニムを使わなければなりません．
  すなわち，以下のように(エラーになる) ::

      data StrictJust a = Just !a

  ではなく，次のようにすべきです． ::

      data StrictJust a <- Just !a where
        StrictJust !a = Just a

..
   - GADTs with kind-polymorphic type arguments now require :ghc-flag:`-XTypeInType`.
     For instance, consider the following, ::

	 data G :: k -> * where
	   GInt   :: G Int
	   GMaybe :: G Maybe

     In previous releases this would compile with :ghc-flag:`-XPolyKinds` alone due
     to bug :ghc-ticket:`13391`. As of GHC 8.4, however, this requires
     :ghc-flag:`-XTypeInType`. Note that since GADT kind signatures aren't generalized,
     this will also require that you provide a :ref:`CUSK
     <complete-kind-signatures>` by explicitly quantifying over the kind argument,
     ``k``, ::

	 data G :: forall k. k -> * where
	   GInt   :: G Int
	   GMaybe :: G Maybe

- カインド多相の型引数を伴う GADT を使うには :ghc-flag:`-XTypeInType` を有効にしなければならなくなりました．
  たとえば， ::

      data G :: k -> * where
        GInt   :: G Int
        GMaybe :: G Maybe

  を考えたとき，直前のリリースでは :ghc-ticket:`13391` のバグにより
  :ghc-flag:`-XPolyKinds` を有効するだけでコンパイルできました．
  しかし，GHC 8.4 では :ghc-flag:`-XTypeInType` を有効にしなけばなりません．
  GADT のカインドシグネチャは一般化されないので :ref:`CUSK <complete-kind-signatures>` が必要で，
  それには，カインド引数 ``k`` を明示的に量化しなければならないことに注意してください． ::

      data G :: forall k. k -> * where
        GInt   :: G Int
        GMaybe :: G Maybe

..
   - The order in which type variables are quantified in GADT constructor type
     signatures has changed. Before, if you had ``MkT`` as below: ::

	 data T a where
	   MkT :: forall b a. b -> T a

     Then the type of ``MkT`` would (counterintuitively) be
     ``forall a b. b -> T a``! Now, GHC quantifies the type variables in the
     order that the users writes them, so the type of ``MkT`` is now
     ``forall b a. b -> T a`` (this matters for :ghc-flag:`-XTypeApplications`).

- GADT 構成子の型シグネチャにおいて型変数が量化される順序が変更になりました．
  以前は ``MkT`` は以下のように ::

      data T a where
        MkT :: forall b a. b -> T a

  としていました．このとき ``MkT`` の型は(直観に反して) ``forall a b. b -> T a`` になりました．
  GHC はユーザーが書いた順で型変数を量化するようになりました．
  したがって ``MkT`` の型は ``forall b a. b -> T a`` (これは :ghc-flag:`-XTypeApplications` が有効なときに重要です)．

..
   - The new :ghc-flag:`-XEmptyDataDeriving` extension allows deriving ``Eq``,
     ``Ord``, ``Read``, and ``Show`` instances directly for empty data types, as
     in ``data Empty deriving Eq``. (Previously, this would require the use of
     :ghc-flag:`-XStandaloneDeriving` to accomplish.)

     One can also now derive ``Data`` instances directly for empty data types (as
     in ``data Empty deriving Data``) without needing to use
     :ghc-flag:`-XStandaloneDeriving`. However, since already requires a GHC
     extension (:ghc-flag:`-XDeriveDataTypeable`), one does not need to enable
     :ghc-flag:`-XEmptyDataDeriving` to do so. This also goes for other classes
     which require extensions to derive, such as :ghc-flag:`-XDeriveFunctor`.

- 新しく :ghc-flag:`-XEmptyDataDeriving` という拡張ができました．
  これを有効にすると直接，空のデータ型に対して ``Eq`` ， ``Ord`` ，
  ``Read`` ， ``Show`` のインスタンスを導出できるようになります．
  たとえば ``data Empty deriving Eq`` のように書けます．
  (直前のリリースでは :ghc-flag:`-XStandaloneDeriving` を有効にする必要がありました．)

  また，（``data Empty deriving Data`` のように) ``Data`` インスタンスも
  :ghc-flag:`-XStandaloneDeriving` を指定しなくても，
  直接，空のデータ型から導出できるようになりました．
  しかし，GHCの拡張 :ghc-flag:`-XDeriveDataTypeable` が必要なので，そのために，
  :ghc-flag:`-XEmptyDataDeriving` を有効にする必要はありません．
  これは :ghc-flag:`-XDeriveFunctor` などの拡張を必要とする他のクラスでも同じです．

..
   - Hexadecimal floating point literals (e.g. ``0x0.1p4``), enabled with
     :ghc-flag:`-XHexFloatLiterals`.  See
     :ref:`Hexadecimal floating point literals <hex-float-literals>`
     for the full details.

- :ghc-flag:`-XHexFloatLiterals` を有効にすれば，16進浮動小数点数リテラル(たとえば ``0x0.1p4``)が使えます．
  詳細については :ref:`Hexadecimal floating point literals <hex-float-literals>` を参照してください．

..
   Compiler
   ~~~~~~~~

コンパイラ
~~~~~~~~~~

..
   - LLVM code generator (e.g. :ghc-flag:`-fllvm`) compatible with LLVM releases in
     the |llvm-version| series.

- LLVMコード生成器 (:ghc-flag:`-fllvm`) は |llvm-version| 系列の LLVM リリースと互換になりました．

- 型検査器が，モジュールにエクスポートリストがないことを警告するようにするためのフラグ
  :ghc-flag:`-Wmissing-export-lists` を追加しました．

..
   - The ``configure`` script now no longer accepts ``--with-TOOL`` flags (e.g.
     ``--with-nm``, ``--with-ld``, etc.). Instead, these are taken from environment
     variables, as is typical in ``autoconf`` scripts. For instance,
     ``./configure --with-nm=/usr/local/bin/nm`` turns into
     ``./configure NM=/usr/local/bin/nm``.

- ``configure`` スクリプトは ``--with-TOOL`` 系のフラグ (たとえば，
  ``--with-nm`` ， ``--with-ld`` など)を受け付けなくなりました．
  代りに，環境変数経由で情報を受け取るようになっています．
  ``autoconf`` スクリプトと同様です．
  たとえば ``./configure --with-nm=/usr/local/bin/nm`` の代わりに ``./configure NM=/usr/local/bin/nm``
  とします．

..
   - Derived ``Functor``, ``Foldable``, and ``Traversable`` instances are now
     optimized when their last type parameters have phantom roles.
     Specifically, ::

       fmap _ = coerce
       traverse _ x = pure (coerce x)
       foldMap _ _ = mempty

     These definitions of ``foldMap`` and ``traverse`` are lazier than the ones we
     would otherwise derive, as they may produce results without inspecting their
     arguments at all.

     See also :ref:`deriving-functor`, :ref:`deriving-foldable`, and
     :ref:`deriving-traversable`.

- 最後の型パラメータがファントムロールを持つ場合 ``Functor`` ， ``Foldable`` ， ``Traversable``
  のインスタンスは最適化されます．
  具体的には， ::

    fmap _ = coerce
    traverse _ x = pure (coerce x)
    foldMap _ _ = mempty

  であるとき，これらの ``foldMap`` および ``traverse`` の定義は他のものを導出した場合にくらべて，遅延されたものになります．
  これは引数を全く見ずに結果を生成できるからです．

  :ref:`deriving-functor` ， :ref:`deriving-foldable` ，:ref:`deriving-traversable` も参照してください．

..
   - Derived instances for empty data types are now substantially different
     than before. Here is an overview of what has changed. These examples will
     use a running example of ``data Empty a`` to describe what happens when an
     instance is derived for ``Empty``:

- 空のデータ型のインスタンス導出は以前とすっかり変りました．
  以下は変更の概要です．
  これらの例は ``data Empty a`` と宣言したとして，
  この ``Empty`` に対してインスタンスを導出するときに何が起こるのかを説明した実例です．

  ..
     - Derived ``Eq`` and ``Ord`` instances would previously emit code that used
       ``error``: ::

	 instance Eq (Empty a) where
	   (==) = error "Void =="

	 instance Ord (Empty a) where
	   compare = error "Void compare"

       Now, they emit code that uses maximally defined, lazier semantics: ::

	 instance Eq (Empty a) where
	   _ == _ = True

	 instance Ord (Empty a) where
	   compare _ _ = EQ

  - 導出された ``Eq`` および ``Ord`` のインスタンスは，直前のリリースでは，以下のような
    ``error`` を使ったコードが作られていました． ::

      instance Eq (Empty a) where
        (==) = error "Void =="

      instance Ord (Empty a) where
        compare = error "Void compare"

    今回のリリースでは，最大限に定義された，より遅延した意味をもつコードが作られます． ::

      instance Eq (Empty a) where
        _ == _ = True

      instance Ord (Empty a) where
        compare _ _ = EQ

  ..
     - Derived ``Read`` instances would previous emit code that used
       ``parens``: ::

	 instance Read (Empty a) where
	   readPrec = parens pfail

       But ``parens`` forces parts of the parsed string that it doesn't need to.
       Now, the derived instance will not use ``parens`` (that it, parsing
       ``Empty`` will always fail, without reading *any* input): ::

	 instance Read (Empty a) where
	   readPrec = pfail

  - 導出された ``Read`` のインスタンスは，直前のリリースでは ``parens`` を用いたコードが作られました． ::

      instance Read (Empty a) where
        readPrec = parens pfail

    しかし ``parens`` は不必要な文字列のパースを強制してしまいます．
    今回のリリースでは，導出されたインスタンスは ``parens`` を使いません(すなわち，
    構文解析による ``Empty`` の生成は常に失敗し，入力文字列が読まれることは *ありません*)． ::

      instance Read (Empty a) where
        readPrec = pfail

  ..
     - Derived ``Show`` instances would previously emit code that used
       ``error``: ::

	 instance Show (Empty a) where
	   showsPrec = error "Void showsPrec"

       Now, they emit code that inspects the argument. That is, if the argument
       diverges, then showing it will also diverge: ::

	 instance Show (Empty a) where
	   showsPrec _ x = case x of {}

  - ``Show`` のインスタンスは，直前のリリースでは ``error`` を使ったコードが作られていました． ::

      instance Show (Empty a) where
        showsPrec = error "Void showsPrec"

    今回のリリースでは，引数を見るコードを作られます．
    したがって，引数が発散すればそれを表示形式にするのも発散します． ::

      instance Show (Empty a) where
        showsPrec _ x = case x of {}

  ..
     - Derived ``Functor``, ``Foldable``, ``Traversable``, ``Generic``,
       ``Generic1``, ``Lift``, and ``Data`` instances previously emitted code that
       used ``error``: ::

	 instance Functor Empty where
	   fmap = error "Void fmap"

	 instance Foldable Empty where
	   foldMap = error "Void foldMap"

	 instance Traversable Empty where
	   traverse = error "Void traverse"

	 instance Generic (Empty a) where
	   from = M1 (error "No generic representation for empty datatype Empty")
	   to (M1 _) = error "No values for empty datatype Empty"
	 -- Similarly for Generic1

	 instance Lift (Empty a) where
	   lift _ = error "Can't lift value of empty datatype Empty"

	 instance Data a => Data (Empty a) where
	   gfoldl _ _ _ = error "Void gfoldl"
	   toConstr _ = error "Void toConstr"
	   ...

       Now, derived ``Functor``, ``Traversable, ``Generic``, ``Generic1``,
       ``Lift``, and ``Data`` instances emit code which inspects their
       arguments: ::

	 instance Functor Empty where
	   fmap _ x = case x of {}

	 instance Traversable Empty where
	   traverse _ x = pure (case x of {})

	 instance Generic (Empty a) where
	   from x = M1 (case x of {})
	   to (M1 x) = case x of {}

	 -- Similarly for Generic1

	 instance Lift (Empty a) where
	   lift x = pure (case x of {})

	 instance Data a => Data (Empty a) where
	   gfoldl _ x = case x of {}
	   toConstr x = case x of {}
	   ...

       Derived ``Foldable`` instances now are maximally lazy: ::

	 instance Foldable Empty where
	   foldMap _ _ = mempty

  - 導出された ``Functor`` ， ``Foldable`` ， ``Traversable`` ， ``Generic`` ，
    ``Generic1`` ， ``Lift`` ， ``Data`` のインスタンスは，直前のリリースでは ``error`` を使ったコードが作られていました． ::

      instance Functor Empty where
        fmap = error "Void fmap"

      instance Foldable Empty where
        foldMap = error "Void foldMap"

      instance Traversable Empty where
        traverse = error "Void traverse"

      instance Generic (Empty a) where
        from = M1 (error "No generic representation for empty datatype Empty")
        to (M1 _) = error "No values for empty datatype Empty"
      -- Similarly for Generic1

      instance Lift (Empty a) where
        lift _ = error "Can't lift value of empty datatype Empty"

      instance Data a => Data (Empty a) where
        gfoldl _ _ _ = error "Void gfoldl"
        toConstr _ = error "Void toConstr"
        ...

    今回のリリースでは，導出された ``Functor`` ， ``Traversable`` ， ``Generic`` ， ``Generic1`` ，
    ``Lift`` ， ``Data`` のインスタンスは引数を見るようになりました． ::

      instance Functor Empty where
        fmap _ x = case x of {}

      instance Traversable Empty where
        traverse _ x = pure (case x of {})

      instance Generic (Empty a) where
        from x = M1 (case x of {})
        to (M1 x) = case x of {}

      -- Similarly for Generic1

      instance Lift (Empty a) where
        lift x = pure (case x of {})

      instance Data a => Data (Empty a) where
        gfoldl _ x = case x of {}
        toConstr x = case x of {}
        ...

    導出された ``Foldable`` のインスタンスは最大限遅延するコードになります． ::

      instance Foldable Empty where
        foldMap _ _ = mempty

..
   - Derived ``Foldable`` instances now derive custom definitions for ``null``
     instead of using the default one. This leads to asymptotically better
     performance for recursive types not shaped like cons-lists, and allows ``null``
     to terminate for more (but not all) infinitely large structures.

- 導出された ``Foldable`` のインスタンスはデフォルトのものではなく，
  カスタマイズされた ``null`` の定義を導出するようになりました．
  これにより，コンスリストとは違う形の再帰型に対する漸近的性能が改善されます．
  また，はてしなく大きな構造の多く（すべてではありません）に対して ``null`` で
  終端できるようになります．

..
   - Configure on Windows now supports the ``--enable-distro-toolchain``
     ``configure`` flag, which can be used to build a GHC using compilers on your
     ``PATH`` instead of using the bundled bindist. See :ghc-ticket:`13792`

- Windowsでの設定では ``--enable-distro-toolchain`` という ``configure`` のフラグが
  サポートされるようになりました．このフラグを使えば，バンドルされたバインドのものではなく，
  ``PATH`` 上にあるコンパイラを使って GHC をビルドできます．
  :ghc-ticket:`13792` を参照してください．

..
   - GHC now enables :ghc-flag:`-fllvm-pass-vectors-in-regs` by default. This means
     that GHC will now use native vector registers to pass vector arguments across
     function calls.

- GHC はデフォルトで :ghc-flag:`-fllvm-pass-vectors-in-regs` を有効にするようになりました．
  すなわち，GHC はネイティブのベクトルレジスタを使用して，関数呼び出しの向うへベクトル引数を渡すようになりました．

..
   - The optional ``instance`` keyword is now usable in type family instance
     declarations. See :ghc-ticket:`13747`

- 型族インスタンス宣言のなかで ``instance`` キーワードを追加することができるようになりました．
  :ghc-ticket:`13747` を参照してください．
	      
- 他にも多くのバグを修正しました．
  `Trac <https://ghc.haskell.org/trac/ghc/query?status=closed&milestone=8.4.1&col=id&col=summary&col=status&col=type&col=priority&col=milestone&col=component&order=priority>`_
  に，一覧表があります．

- 新しいフラグ :ghc-flag:`-fignore-optim-changes` および
  :ghc-flag:`-fignore-hpc-changes` を使うと，最適化フラグや HPC フラグが異っていても
  直前にコンパイルしたモジュールを再利用できます．
  これらのオプションはデフォルトで :ghc-flag:`--interactive` により有効になります．
  :ghc-ticket:`13604` を参照してください．

..
   Runtime system
   ~~~~~~~~~~~~~~

ランタイムシステム
~~~~~~~~~~~~~~~~~~

- 関数 ``hs_add_root()`` が削除されました．この関数は，GHC-7.2.1 以降，
  モジュールの初期化が ``hs_add_root()`` の呼び出しを要求しなくなって，
  何もしない関数になっていました．

- Proper import library support added to GHC which can handle all of the libraries produced
  by ``dlltool``. The limitation of them needing to be named with the suffix
  ``.dll.a`` is also removed. See :ghc-ticket:`13606`, :ghc-ticket:`12499`,
  :ghc-ticket:`12498`

- The GHCi runtime linker on Windows now supports the ``big-obj`` file format.

- The runtime system's :ref:`native stack backtrace <backtrace-signal>` support
  on POSIX platforms is now triggered by ``SIGQUIT`` instead of ``SIGUSR2`` as
  it was in previous releases. This change is to bring GHC's behavior into
  compliance with the model set by the most Java virtual machine
  implementations.

- The GHC runtime on Windows now uses Continue handlers instead of Vectorized
  handlers to trap exceptions. This change gives other exception handlers a chance
  to handle the exception before the runtime does. Furthermore The RTS flag
  :rts-flag:`--install-seh-handlers=<yes|no>` Can be used on Wndows to
  completely disable the runtime's handling of exceptions. See
  :ghc-ticket:`13911`, :ghc-ticket:`12110`.

- The GHC runtime on Windows can now generate crash dumps on unhandled exceptions
  using the RTS flag :rts-flag:`--generate-crash-dumps`.

- The GHCi runtime linker now avoid calling GCC to find libraries as much as possible by caching
  the list of search directories of GCC and querying the file system directly. This results in
  much better performance, especially on Windows.

- The GHC runtime on Windows can now generate stack traces on unhandled exceptions.
  When running in GHCi more information is displayed about the symbols if available.
  This behavior can be controlled with the RTS flag `--generate-stack-traces=<yes|no>`.

Template Haskell
~~~~~~~~~~~~~~~~

- Template Haskell now reifies data types with GADT syntax accurately.
  Previously, TH used heuristics to determine whether a data type
  should be reified using GADT syntax, which could lead to incorrect results,
  such as ``data T1 a = (a ~ Int) => MkT1`` being reified as a GADT and
  ``data T2 a where MkT2 :: Show a => T2 a`` *not* being reified as a GADT.

  In addition, reified GADT constructors now more accurately track the order in
  which users write type variables. Before, if you reified ``MkT`` as below: ::

      data T a where
        MkT :: forall b a. b -> T a

  Then the reified type signature of ``MkT`` would have been headed by
  ``ForallC [PlainTV a, PlainTV b]``. Now, reifying ``MkT`` will give a type
  headed by ``ForallC [PlainTV b, PlainTV a]``, as one would expect.


- ``Language.Haskell.TH.FamFlavour``, which was deprecated in GHC 8.2,
  has been removed.

``base`` library
~~~~~~~~~~~~~~~~

- Blank strings can now be used as values for environment variables using the
  ``System.Environment.Blank`` module. See :ghc-ticket:`12494`

- ``Data.Type.Equality.==`` is now a closed type family. It works for all kinds
  out of the box. Any modules that previously declared instances of this family
  will need to remove them. Whereas the previous definition was somewhat ad
  hoc, the behavior is now completely uniform. As a result, some applications
  that used to reduce no longer do, and conversely. Most notably, ``(==)`` no
  longer treats the ``*``, ``j -> k``, or ``()`` kinds specially; equality is
  tested structurally in all cases.

Build system
~~~~~~~~~~~~

- ``dll-split`` has been removed and replaced with an automatic partitioning utility ``gen-dll``.
  This utility can transparently split and compile any DLLs that require this. Note that the ``rts`` and
  ``base`` can not be split at this point because of the mutual recursion between ``base`` and ``rts``.
  There is currently no explicit dependency between the two in the build system and such there is no way
  to notify ``base`` that the ``rts`` has been split, or vice versa.
  (see :ghc-ticket:`5987`).


Included libraries
------------------

The package database provided with this distribution also contains a number of
packages other than GHC itself. See the changelogs provided with these packages
for further change information.

.. ghc-package-list::

    libraries/array/array.cabal:             Dependency of ``ghc`` library
    libraries/base/base.cabal:               Core library
    libraries/binary/binary.cabal:           Dependency of ``ghc`` library
    libraries/bytestring/bytestring.cabal:   Deppendency of ``ghc`` library
    libraries/Cabal/Cabal/Cabal.cabal:       Dependency of ``ghc-pkg`` utility
    libraries/containers/containers.cabal:   Dependency of ``ghc`` library
    libraries/deepseq/deepseq.cabal:         Dependency of ``ghc`` library
    libraries/directory/directory.cabal:     Dependency of ``ghc`` library
    libraries/filepath/filepath.cabal:       Dependency of ``ghc`` library
    compiler/ghc.cabal:                      The compiler itself
    libraries/ghci/ghci.cabal:               The REPL interface
    libraries/ghc-boot/ghc-boot.cabal:       Internal compiler library
    libraries/ghc-compact/ghc-compact.cabal: Core library
    libraries/ghc-prim/ghc-prim.cabal:       Core library
    libraries/haskeline/haskeline.cabal:     Dependency of ``ghci`` executable
    libraries/hpc/hpc.cabal:                 Dependency of ``hpc`` executable
    libraries/integer-gmp/integer-gmp.cabal: Core library
    libraries/mtl/mtl.cabal:                 Dependency of ``Cabal`` library
    libraries/parsec/parsec.cabal:           Dependency of ``Cabal`` library
    libraries/process/process.cabal:         Dependency of ``ghc`` library
    libraries/template-haskell/template-haskell.cabal:     Core library
    libraries/text/text.cabal:               Dependency of ``Cabal`` library
    libraries/time/time.cabal:               Dependency of ``ghc`` library
    libraries/transformers/transformers.cabal: Dependency of ``ghc`` library
    libraries/unix/unix.cabal:               Dependency of ``ghc`` library
    libraries/Win32/Win32.cabal:             Dependency of ``ghc`` library
    libraries/xhtml/xhtml.cabal:             Dependency of ``haddock`` executable

Win32
~~~~~

.. attention::

    This release is a backwards incompatible release which corrects the type of
    certain APIs. See issue `#24 <https://github.com/haskell/win32/issues/24>`_.
